gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/test16188.d
version https://git-lfs.github.com/spec/v1
oid sha256:be72f1fd5ef9faac5c81596bd7bae358449c0bfd4acba1e69b4304d110968786
size 878
